fixed aligning issues and border radius

--- a/web/static/css/list.css
+++ b/web/static/css/list.css
@@ -99,16 +99,15 @@
 
 /* Add Playbook section inside select-panel */
 .add-playbook-group {
-    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    gap: 12px;
+    gap: 10px;
 }
 
 .add-playbook-group label {
     margin-top: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     color: #00ff99;
     font-size: 15px;
     font-family: 'Orbitron', sans-serif;
@@ -116,16 +115,13 @@
 }
 
 .add-playbook-group input {
-        height: 40px;
-        width: 100%;
         background: #222;
         border: 1px solid #333;
-        border-radius: 10px;
+        border-radius: 4px;
         color: white;
         font-family: 'Orbitron', sans-serif;
         font-size: 14px;
-        padding: 8px 12px;
-        box-shadow: 0px 0px 8px rgba(0, 255, 153, 0.4);   
+        padding: 10px;
 }
 
 .add-playbook-group button {
